# pipui

./: README.md  pyproject.toml
scripts/: autofix.sh
src/pipui/: main.py
src/pipui/common/: executor.py  logging.py
src/pipui/core/: executor.py  modules.py  pip.py  services.py
src/pipui/core/manager/: pip.py
src/pipui/ui/: dashboard.py  pages.py  threads.py  widgets.py
