[project]
name = "pipui"
version = "0.1.0"
description = "Pip UI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "pip>=25.1.1",
    "pyqt6>=6.9.1",
    "pyside6>=6.9.1",
    "qt-material>=2.17",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
]

[project.scripts]
pipui = "pipui.main:main"

[tool.pylint.messages_control]
disable = ["missing-docstring",
           "too-many-instance-attributes", "too-few-public-methods",
           "inconsistent-return-statements",
           "too-many-arguments", "too-many-positional-arguments"]

[tool.black]
line-length = 100

[tool.pylint]
# 启用彩色输出
output-format = "colorized"

[tool.pylint.format]
# 强制使用 LF 换行符（Unix 风格）
expected-line-ending-format = "LF"

[tool.uv.sources]
torch = { index = "tsinghua" }

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
